# helios

./: .env.example  .gitignore  BASE.txt  CHANGES.md  DEVELOPER_HANDOFF.md  PROJECT_OVERVIEW.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: deps.py
backend/scripts/: backfill_job_labels.py  import_dryrun.py  phase7_reset_sc0020.py  phase7_reverse_modified_recommits.py  reparse_additive_import_fields.py
backend/tests/: conftest.py  test_activities.py  test_customer_contact_variants.py  test_customer_merge.py  test_customer_merge_storage.py  test_customers.py  test_dev_reset.py  test_hardware_admin_api.py  test_hardware_catalogue_seed.py  test_hardware_parser_spec_validation.py  test_hardware_runtime.py  test_hardware_search.py  test_import.py  test_import_commit.py  test_import_commit_preview.py  test_import_contact_variant_capture.py  test_import_date_audit.py  test_import_details.py  test_import_field_registry.py  test_import_groups.py  test_import_groups_commit.py  test_import_hardware.py  test_import_matching.py  test_import_nmi_same.py  test_import_recommit.py  test_import_reparse.py  test_import_resolution.py  test_import_resolution_commit.py  test_import_reverse.py  test_import_review.py  test_import_structured_edit.py  test_job_labels.py  test_job_source_customer_name.py  test_jobs.py  test_jobs_hardware_snapshot.py  test_jobs_structured_edit.py  test_matching_core.py  test_smoke.py  test_tasks.py
(+209 files in other folders)
