[project]
name = "helios-core-backend"
version = "0.1.0"
description = "Helios Core operations platform — FastAPI backend"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/Query) in defaults.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = false
ignore_missing_imports = true
